# cargo-pacco

./: .gitignore  Cargo.toml  README.md
src/: main.rs
