[package]
name = "cargo-pacco"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
cargo_metadata = "0.18.1"
clap = { version = "4.5.18", features = ["derive"] }
clap-cargo = "0.14.1"
quote = { version = "1.0.37", default-features = false }
syn = { version = "2.0.79", default-features = false, features = [
    "parsing",
    "printing",
    "full",
    "visit",
    "visit-mut",
    "extra-traits",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log"] }

[patch.crates-io]
cargo_metadata = { git = "https://github.com/oli-obk/cargo_metadata" }
